k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-srtknk
  labels:
    name: server
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 3000
      targetPort: 8000
